cmake_minimum_required(VERSION 3.9)
project(OJ)

set(CMAKE_CXX_STANDARD 11)

add_executable(OJ
#        DFS/pku-1970-dfs.cpp
#        DFS/pku-1970.cpp
#        DFS/pku-1979.cpp
#        DFS/pku-2253-dfs.cpp
#        DFS/pku-2253-dijkstra.cpp
#        DFS/pku-2253-floyd.cpp
#        DFS/pku-2253-spfa.cpp
        DFS/pku-1330.cpp DFS/pku-1330-lca.cpp)
