cmake_minimum_required(VERSION 3.9)
project(OJ)

set(CMAKE_CXX_STANDARD 11)

add_executable(OJ
#        DFS/pku-1970-dfs.cpp
#        DFS/pku-1970.cpp
#        DFS/pku-1979.cpp
#        DFS/pku-2253-dfs.cpp
#        DFS/pku-2253-dijkstra.cpp
#        DFS/pku-2253-floyd.cpp
#        DFS/pku-2253-spfa.cpp
#        DFS/pku-1330.cpp
#        DFS/pku-1330-lca.cpp
#        基本算法/qsort.cpp
#        DP/pku-2663.cpp
#        DP/hdu-2044.cpp
#        DP/hdu-2045.cpp
#        DP/hdu-2046.cpp
#        DP/hdu-2047.cpp
#        DP/hdu-2050.cpp
#        B-I-T/HDU-1166.cpp
#        DP/hdu-2048.cpp
#        DP/hdu-2049.cpp
#        C语言程序设计练习/hdu-2013.cpp
        C语言程序设计练习/hdu-2000.cpp)
