cmake_minimum_required(VERSION 3.9)
project(OJ)

set(CMAKE_CXX_STANDARD 11)

add_executable(OJ
#        DFS/pku-1970-dfs.cpp
#        DFS/pku-1970.cpp
#        DFS/pku-1979.cpp
#        DFS/pku-2253-dfs.cpp
#        DFS/pku-2253-dijkstra.cpp
#        DFS/pku-2253-floyd.cpp
#        DFS/pku-2253-spfa.cpp
#        DFS/pku-1330.cpp
#        DFS/pku-1330-lca.cpp
#        基本算法/qsort.cpp
#        DP/pku-2663.cpp
#        DP/hdu-2044.cpp
#        DP/hdu-2045.cpp
#        DP/hdu-2046.cpp
#        DP/hdu-2047.cpp
#        DP/hdu-2050.cpp
#        B-I-T/HDU-1166.cpp
#        DP/hdu-2048.cpp
#        DP/hdu-2049.cpp
#        C-Exercise/hdu-2013.cpp
#        C-Exercise/hdu-2000.cpp
#        C-Exercise/hdu-2002.cpp
#        C-Exercise/hdu-2003.cpp
#        C-Exercise/hdu-2004.cpp
#        C-Exercise/hdu-2005.cpp
#        C-Exercise/hdu-2006.cpp
#        C-Exercise/hdu-2007.cpp
#        C-Exercise/hdu-2008.cpp
#        C-Exercise/hdu-2009.cpp
#        C-Exercise/hdu-2010.cpp
#        C-Exercise/hdu-2011.cpp
        C-Exercise/hdu-2012.cpp)
